--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -25,6 +27,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
+    "@storybook/addon-docs": "^9.1.8",
+    "@storybook/addon-onboarding": "^9.1.8",
+    "@storybook/vue3-vite": "^9.1.8",
     "@testing-library/jest-dom": "^6.4.1",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
@@ -37,11 +42,13 @@
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.33.0",
     "eslint-plugin-playwright": "^2.2.2",
+    "eslint-plugin-storybook": "^9.1.8",
     "eslint-plugin-vue": "~10.4.0",
     "jiti": "^2.5.1",
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
+    "storybook": "^9.1.8",
     "typescript": "~5.9.0",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2",
